--- a/dashboard.html
+++ b/dashboard.html
@@ -38,6 +38,8 @@
             <div class="col-sm-3 bg-dark" style="border-top-right-radius: 10px; border-bottom-right-radius: 10px;">
                <h3>Personal Dashboard</h3>
                <br>
+               <a href="https://apps.hz.nl/rooster/" target="_blank" style="text-decoration: none" class="button">Rooster</a>
+               <br><br>
                <a href="https://learn.hz.nl/" target="_blank" style="text-decoration: none" class="button">Learn.hz</a>
                <br><br>
                <a href="https://apps.hz.nl/angular/studievoortgang/studiestatus" target="_blank" style="text-decoration: none" class="button">Studievoortgang</a> 
@@ -208,8 +210,8 @@
                   <h2>NBSA</h2>
                   <div class="progress" style="width: 75%;">
                      <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="45"
-                        style="width:88%">
-                        40EC
+                        style="width:0%">
+                        0EC
                      </div>
                   </div>
                </div>
@@ -218,8 +220,9 @@
                   <h2>Propedeuse Voortgang</h2>
                   <div class="progress">
                      <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="60"
-                        style="width:66%">
-                        40EC
+                        style="width:0%">
+                        
+                        0EC
                      </div>
                   </div>
                </div>
