--- a/dashboard.html
+++ b/dashboard.html
@@ -3,232 +3,309 @@
    <head>
       <link rel="stylesheet" href="style.css">
       <title>Startpagina</title>
-      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-         crossorigin="anonymous"></script>
-      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-         crossorigin="anonymous"></script>
-   
-   </head>
-   
-   <body>
-      <!--Navbar-->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-         </button>
-         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-               <a class="nav-item nav-link" href="index.html">Home</a>
-               <a class="nav-item nav-link" href="profile.html">Profile</a>
-               <a class="nav-item nav-link active" href="dashboard.html">Dashboard <span
-                     class="sr-only">(current)</span></a>
-               <a class="nav-item nav-link" href="faq.html">FAQ</a>
-            </div>
-         </div>
-      </nav>
-      <!--Navbar-->
-      <br>
-      <div class="container-fluid">
-         <div class="row">
-            <div class="col-sm-3 bg-dark" style="border-top-right-radius: 10px; border-bottom-right-radius: 10px;">
-               <h3>Personal Dashboard</h3>
-               <br>
-               <a href="https://apps.hz.nl/rooster/" target="_blank" style="text-decoration: none" class="button">Rooster</a>
-               <br><br>
-               <a href="https://learn.hz.nl/" target="_blank" style="text-decoration: none" class="button">Learn.hz</a>
-               <br><br>
-               <a href="https://apps.hz.nl/angular/studievoortgang/studiestatus" target="_blank" style="text-decoration: none" class="button">Studievoortgang</a> 
-               <br><br>
-               <a href="https://teams.microsoft.com/_#/school//?ctx=teamsGrid" target="_blank" style="text-decoration: none" class="button">Teams</a>
-               <br><br>
-               <a href="https://hz.nl/uploads/documents/Regelingen/EN/OER-HZ-2019-2020werkdocv2018-05-17DEF_ENGELS-AC-29112019.pdf" target="_blank" style="text-decoration: none" class="button">CER van HZ</a>
-               <br><br>
-               <a href="https://github.com/DaveElshout" target="_blank" style="text-decoration: none" class="button">Github van Dave</a>
-               <br><br>
-               <a href="https://hz.nl/uploads/documents/Regelingen/OERS/2019-2020/2020-2021-ICT-Implementation-Regulations-CER-HZ-DEF1.0.pdf" target="_blank" style="text-decoration: none" class="button">IR van HZ, studie HBO-ICT</a><br>
-            </div>
-            <div class="col-sm-1"></div>
-            <div class="col-sm-8">
-               <div class="row border">
-                  <div class="col-2 border">
-                     Quartile
-                  </div>
-                  <div class="col border">
-                     Course
-                  </div>
-                  <div class="col-1 border">
-                     EC
-                  </div>
-                  <div class="col border">
-                     Examn
-                  </div>
-                  <div class="col-1 border">
-                     Grade
-                  </div>
-               </div>
-   
-               <div class="row border">
-                  <div class="col-2 border">
-                     1.
-                  </div>
-                  <div class="col border stackem">
-                     <div>Programme and Career Orientation</div>
-                     <div>Computer Science Basics</div>
-                     <div>Programming Basics</div>
-                  </div>
-                  <div class="col-1 border stackem">
-                     <div>2.5</div>
-                     <div>7.5</div>
-                     <div>5</div>
-                  </div>
-                  <div class="col border stackem">
-                     <div>Assesment exam</div>
-                     <div>Written exam</div>
-                     <div>Case study exam</div>
-                  </div>
-                  <div class="col-1 border stackem">
-                     <div>N/A</div>
-                     <div>N/A</div>
-                     <div>N/A</div>
-                  </div>
-               </div>
-   
-               <div class="row border">
-                  <div class="col-2 border">
-                     <div>2.</div>
-                  </div>
-                  <div class="col border">
-                     <div>Object Oriented Programming</div>
-                     <div></div>
-                     <div>Professional Skills 1</div>
-                  </div>
-                  <div class="col-1 border">
-                     <div>10</div>
-                     <div></div>
-                     <div>2.5</div>
-                  </div>
-                  <div class="col border">
-                     <div>Case study</div>
-                     <div>Project</div>
-                     <div>Portfolio exam</div>
-                  </div>
-                  <div class="col-1 border">
-                     <div>N/A</div>
-                     <div>N/A</div>
-                     <div>N/A</div>
-                  </div>
-               </div>
-   
-               <div class="row border">
-                  <div class="col-2 border">
-                     <div>3.</div>
-                  </div>
-                  <div class="col border">
-                     <div>Framework Project 1</div>
-                     <div>Framework Development 1</div>
-                     <div>Professional working Environment</div>
-                     <div>Professional Skills 2</div>
-                  </div>
-                  <div class="col-1 border">
-                     <div>5</div>
-                     <div>5</div>
-                     <div>2.5</div>
-                     <div>2.5</div>
-                  </div>
-                  <div class="col border">
-                     <div>2 Portfolio exams</div>
-                     <div>Case study</div>
-                     <div>Assesment</div>
-                     <div>Portfolio exam</div>
-                     <div>2 Written exams</div>
-                  </div>
-                  <div class="col-1 border">
-                     <div>N/A</div>
-                     <div>N/A</div>
-                     <div>N/A</div>
-                     <div>N/A</div>
-                     <div>N/A</div>
-                  </div>
-               </div>
-   
-               <div class="row border">
-                  <div class="col-2 border">
-                     <div>4.</div>
-                  </div>
-                  <div class="col border">
-                     <div>Framework Project 2</div>
-                     <div>Framework Development 2</div>
-                     <div>Professional Skills 3</div>
-                  </div>
-                  <div class="col-1 border">
-                     <div>5</div>
-                     <div>5</div>
-                     <div>2.5</div>
-                  </div>
-                  <div class="col border">
-                     <div>Portfolio exam</div>
-                     <div>Portfolio exam</div>
-                     <div>Portfolio exam</div>
-                     <div>2 written exams</div>
-                  </div>
-                  <div class="col-1 border">
-                     <div>N/A</div>
-                     <div>N/A</div>
-                     <div>N/A</div>
-                     <div>N/A</div>
-                  </div>
-               </div>
-               
-               <div class="row border">
-                  <div class="col-2 border">
-                     <div>Whenever</div>
-                  </div>
-                  <div class="col border">
-                     <div>HZ Personality</div>
-                     <div>IT Personality</div>
-                  </div>
-                  <div class="col-1 border">
-                     <div>2.5</div>
-                     <div>2.5</div>
-                  </div>
-                  <div class="col border">
-                     <div>Portfolio</div>
-                     <div>Portfolio</div>
-                  </div>
-                  <div class="col-1 border">
-                     <div>N/A</div>
-                     <div>N/A</div>
-                  </div>
-               </div>
-               <br><br>
-               <div class="container">
-                  <h2>NBSA</h2>
-                  <div class="progress" style="width: 75%;">
-                     <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="45"
-                        style="width:0%">
-                        0EC
-                     </div>
-                  </div>
-               </div>
-               <br><br>
-               <div class="container">
-                  <h2>Propedeuse Voortgang</h2>
-                  <div class="progress">
-                     <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="60"
-                        style="width:0%">
-                        
-                        0EC
-                     </div>
-                  </div>
-               </div>
-               <br><br>
-            </div>
-         </div>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+
+  <body>
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link" href="index.html">Home</a>
+          <a class="nav-item nav-link" href="profile.html">Profile</a>
+          <a class="nav-item nav-link active" href="dashboard.html"
+            >Dashboard <span class="sr-only">(current)</span></a
+          >
+          <a class="nav-item nav-link" href="faq.html">FAQ</a>
+        </div>
       </div>
+    </nav>
+    <!--Navbar-->
+    <br />
+    <div class="container-fluid">
+      <div class="row">
+        <div
+          class="col-sm-3 bg-dark"
+          style="
+            border-top-right-radius: 10px;
+            border-bottom-right-radius: 10px;
+          "
+        >
+          <h3>Personal Dashboard</h3>
+          <br />
+          <a
+            href="https://apps.hz.nl/rooster/"
+            target="_blank"
+            style="text-decoration: none;"
+            class="button"
+            >Rooster</a
+          >
+          <br /><br />
+          <a
+            href="https://learn.hz.nl/"
+            target="_blank"
+            style="text-decoration: none;"
+            class="button"
+            >Learn.hz</a
+          >
+          <br /><br />
+          <a
+            href="https://apps.hz.nl/angular/studievoortgang/studiestatus"
+            target="_blank"
+            style="text-decoration: none;"
+            class="button"
+            >Studievoortgang</a
+          >
+          <br /><br />
+          <a
+            href="https://teams.microsoft.com/_#/school//?ctx=teamsGrid"
+            target="_blank"
+            style="text-decoration: none;"
+            class="button"
+            >Teams</a
+          >
+          <br /><br />
+          <a
+            href="https://hz.nl/uploads/documents/Regelingen/EN/OER-HZ-2019-2020werkdocv2018-05-17DEF_ENGELS-AC-29112019.pdf"
+            target="_blank"
+            style="text-decoration: none;"
+            class="button"
+            >CER van HZ</a
+          >
+          <br /><br />
+          <a
+            href="https://github.com/DaveElshout"
+            target="_blank"
+            style="text-decoration: none;"
+            class="button"
+            >Github van Dave</a
+          >
+          <br /><br />
+          <a
+            href="https://hz.nl/uploads/documents/Regelingen/OERS/2019-2020/2020-2021-ICT-Implementation-Regulations-CER-HZ-DEF1.0.pdf"
+            target="_blank"
+            style="text-decoration: none;"
+            class="button"
+            >IR van HZ, studie HBO-ICT</a
+          ><br />
+        </div>
+        <div class="col-sm-1"></div>
+        <div class="col-sm-8">
+          <div class="row border">
+            <div class="col-2 border">
+              Quartile
+            </div>
+            <div class="col border">
+              Course
+            </div>
+            <div class="col-1 border">
+              EC
+            </div>
+            <div class="col border">
+              Examn
+            </div>
+            <div class="col-1 border">
+              Grade
+            </div>
+          </div>
+
+          <div class="row border">
+            <div class="col-2 border">
+              1.
+            </div>
+            <div class="col border stackem">
+              <div>Programme and Career Orientation</div>
+              <div>Computer Science Basics</div>
+              <div>Programming Basics</div>
+            </div>
+            <div class="col-1 border stackem">
+              <div>2.5</div>
+              <div>7.5</div>
+              <div>5</div>
+            </div>
+            <div class="col border stackem">
+              <div>Assesment exam</div>
+              <div>Written exam</div>
+              <div>Case study exam</div>
+            </div>
+            <div class="col-1 border stackem">
+              <div id="grade0">N/A</div>
+              <div id="grade1">N/A</div>
+              <div id="grade2">N/A</div>
+            </div>
+          </div>
+
+          <div class="row border">
+            <div class="col-2 border">
+              <div>2.</div>
+            </div>
+            <div class="col border">
+              <div>Object Oriented Programming</div>
+              <div></div>
+              <div>Professional Skills 1</div>
+            </div>
+            <div class="col-1 border">
+              <div>10</div>
+              <div></div>
+              <div>2.5</div>
+            </div>
+            <div class="col border">
+              <div>Case study</div>
+              <div>Project</div>
+              <div>Portfolio exam</div>
+            </div>
+            <div class="col-1 border">
+              <div id="grade3">N/A</div>
+              <div id="grade4">N/A</div>
+              <div id="grade5">N/A</div>
+            </div>
+          </div>
+
+          <div class="row border">
+            <div class="col-2 border">
+              <div>3.</div>
+            </div>
+            <div class="col border">
+              <div>Framework Project 1</div>
+              <div>Framework Development 1</div>
+              <div>Professional working Environment</div>
+              <div>Professional Skills 2</div>
+            </div>
+            <div class="col-1 border">
+              <div>5</div>
+              <div>5</div>
+              <div>2.5</div>
+              <div>2.5</div>
+            </div>
+            <div class="col border">
+              <div>2 Portfolio exams</div>
+              <div>Case study</div>
+              <div>Assesment</div>
+              <div>Portfolio exam</div>
+              <div>2 Written exams</div>
+            </div>
+            <div class="col-1 border">
+              <div id="grade6">N/A</div>
+              <div id="grade7">N/A</div>
+              <div id="grade8">N/A</div>
+              <div id="grade9">N/A</div>
+              <div id="grade10">N/A</div>
+            </div>
+          </div>
+
+          <div class="row border">
+            <div class="col-2 border">
+              <div>4.</div>
+            </div>
+            <div class="col border">
+              <div>Framework Project 2</div>
+              <div>Framework Development 2</div>
+              <div>Professional Skills 3</div>
+            </div>
+            <div class="col-1 border">
+              <div>5</div>
+              <div>5</div>
+              <div>2.5</div>
+            </div>
+            <div class="col border">
+              <div>Portfolio exam</div>
+              <div>Portfolio exam</div>
+              <div>Portfolio exam</div>
+              <div>2 written exams</div>
+            </div>
+            <div class="col-1 border">
+              <div id="grade11">N/A</div>
+              <div id="grade12">N/A</div>
+              <div id="grade13">N/A</div>
+              <div id="grade14">N/A</div>
+            </div>
+          </div>
+
+          <div class="row border">
+            <div class="col-2 border">
+              <div>Whenever</div>
+            </div>
+            <div class="col border">
+              <div>HZ Personality</div>
+              <div>IT Personality</div>
+            </div>
+            <div class="col-1 border">
+              <div>2.5</div>
+              <div>2.5</div>
+            </div>
+            <div class="col border">
+              <div>Portfolio</div>
+              <div>Portfolio</div>
+            </div>
+            <div class="col-1 border">
+              <div id="grade15">N/A</div>
+              <div id="grade16">N/A</div>
+            </div>
+          </div>
+          <br /><br />
+          <div class="container">
+            <h2>NBSA</h2>
+            <div class="progress" style="width: 75%;">
+              <div
+                class="progress-bar"
+                role="progressbar"
+                aria-valuenow="30"
+                aria-valuemin="0"
+                aria-valuemax="45"
+                style="width: 0%;"
+                id="aantalEC"
+              >
+                0EC
+              </div>
+            </div>
+          </div>
+          <br /><br />
+          <div class="container">
+            <h2>Propedeuse Voortgang</h2>
+            <div class="progress">
+              <div
+                class="progress-bar"
+                role="progressbar"
+                aria-valuenow="30"
+                aria-valuemin="0"
+                aria-valuemax="60"
+                style="width: 0%;"
+                id= "aantalEcPropedeuse"
+              >
+                0EC
+              </div>
+            </div>
+          </div>
+          <br /><br />
+        </div>
+      </div>
+    </div>
+      <script src="site.js"></script>
    </body>
 </html>
