--- a/profile.html
+++ b/profile.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <!---->
+  <!--links-->
   <link rel="stylesheet" href="style.css">
   <title>Startpagina</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -168,7 +168,7 @@
   </div>
   <br>
   <br>
-  
+  <script src="site.js"></script>
 </body>
 
 </html>
