--- a/dashboard.html
+++ b/dashboard.html
@@ -100,7 +100,7 @@
           >
           <br /><br />
           <a
-            href="https://github.com/DaveElshout"
+            href="https://github.com/JustDave2002"
             target="_blank"
             style="text-decoration: none;"
             class="button"
@@ -122,7 +122,7 @@
             class="button"
             >Runner Game</a
           >
-          <br /><br />https://justdave2002.github.io/basisschoolGame/
+          <br /><br />
           <a
             href="https://hz.nl/uploads/documents/Regelingen/OERS/2019-2020/2020-2021-ICT-Implementation-Regulations-CER-HZ-DEF1.0.pdf"
             target="_blank"
